@@ -4,5 +4,5 @@
 <findlib>:      include
 <sexplib>:      include
 <compilers>:    include
-<*.ml>:  pkg_netstring,pkg_sexplib,pkg_bin_prot,pkg_sexplib.syntax,syntax_camlp4o
-<*.mli>: pkg_netstring,pkg_camomile,pkg_sexplib,camlp4o,use_optcomp
+<*.ml>:  camlp4ofix,pkg_netstring,pkg_sexplib,pkg_bin_prot,pkg_sexplib.syntax
+<*.mli>: camlp4ofix,pkg_netstring,pkg_camomile,pkg_sexplib,use_optcomp
